# sysdui

./: .gitignore  Cargo.toml  LICENSE  README.md  gpg.key
.github/workflows/: release.yml
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages  Release
docs/: OVERVIEW.md
docs/features/: configuration.md  dbus_communication.md  event_system.md  log_streaming.md  pane_layout.md  pane_management.md  service_browsing.md  service_control.md  session_state.md  ui_rendering.md
pool/main/s/sysdui/: sysdui_0.1.0-1_amd64.deb  sysdui_0.2.0-1_amd64.deb
src/: app.rs  event.rs  main.rs  state.rs  tui.rs
src/config/: keys.rs  mod.rs
src/journal/: filter.rs  mod.rs
src/systemd/: commands.rs  dbus.rs  mod.rs  types.rs
src/ui/: confirm.rs  context_menu.rs  detail.rs  help.rs  logs.rs  mod.rs  panes.rs  search.rs  sidebar.rs
